Spotless plugin.